--- a/content/02.main.md
+++ b/content/02.main.md
@@ -4,6 +4,26 @@ Candidate titles:
 ## Overcoming degree bias in network link prediction using permutation
 ## Permuted networks isolate degree bias in link prediction
 
+<pre id="test-basics" style="display:none">
+    \begin{algorithm}
+    \caption{Test atoms}
+    \begin{algorithmic}
+    \STATE \textbf{Specials:} \{ \} \$ \& \# \% \_
+    \STATE \textbf{Bools:} \AND \OR \NOT \TRUE \FALSE
+    \STATE \textbf{Carriage return:} first line \\ second line
+    \STATE \textbf{Text-symbols:} \textbackslash
+    \STATE \textbf{Quote-symbols:} `single quotes', ``double quotes''
+    \STATE \textbf{Math:} $(\mathcal{C}_m)$, $i \gets i + 1$, $E=mc^2$, \( x^n + y^n = z^n \), $\$$, \(\$\)
+    \END{ALGORITHMIC}
+    \END{ALGORITHM}
+</pre>
+<script type="text/javascript">
+    var testBasics = document.getElementById("test-basics").textContent;
+    pseudocode.render(testBasics, document.body, {
+        lineNumber: false,
+    });
+</script>
+
 ## Outline Level I
 
 General introduction to the idea of permuted networks.
@@ -124,7 +144,7 @@ To allow greater flexibility for heterogeneous biomedical networks with various 
 Specifically, two chosen edges constitute a valid swap if they preserve degree for all four involved nodes and do not violate the above condition options.
 The original algorithm and our proposed modification are shown below.
 
-\begin{algorithm}
+<!-- \begin{algorithm}
     \centering
     \begin{spacing}{1.15}
     \begin{algorithmic}
@@ -168,7 +188,7 @@ The original algorithm and our proposed modification are shown below.
     \end{spacing}
     \caption{Proposed modified algorithm for multi-type network permutation}
     \label{fig:xswap_original}
-\end{algorithm}
+\end{algorithm} -->
 
 ## Results
 
