Update HTML to PDF

--- a/content/02.main.md
+++ b/content/02.main.md
@@ -1,8 +1,8 @@
-Candidate titles:
+<!-- Candidate titles: -->
 
-## Quantifying the effect of node degree on unweighted network inference methods
+<!-- ## Quantifying the effect of node degree on unweighted network inference methods
 ## Overcoming degree bias in network link prediction using permutation
-## Permuted networks isolate degree bias in link prediction
+## Permuted networks isolate degree bias in link prediction -->
 
 <pre id="test-basics" style="display:none">
     \begin{algorithm}
