--- a/content/02.main.md
+++ b/content/02.main.md
@@ -4,25 +4,6 @@
 ## Overcoming degree bias in network link prediction using permutation
 ## Permuted networks isolate degree bias in link prediction -->
 
-<pre id="test-basics" style="display:none">
-    \begin{algorithm}
-    \caption{Test atoms}
-    \begin{algorithmic}
-    \STATE \textbf{Specials:} \{ \} \$ \& \# \% \_
-    \STATE \textbf{Bools:} \AND \OR \NOT \TRUE \FALSE
-    \STATE \textbf{Carriage return:} first line \\ second line
-    \STATE \textbf{Text-symbols:} \textbackslash
-    \STATE \textbf{Quote-symbols:} `single quotes', ``double quotes''
-    \STATE \textbf{Math:} $(\mathcal{C}_m)$, $i \gets i + 1$, $E=mc^2$, \( x^n + y^n = z^n \), $\$$, \(\$\)
-    \END{ALGORITHMIC}
-    \END{ALGORITHM}
-</pre>
-<script type="text/javascript">
-    var testBasics = document.getElementById("test-basics").textContent;
-    pseudocode.render(testBasics, document.body, {
-        lineNumber: false,
-    });
-</script>
 
 ## Outline Level I
 
@@ -94,7 +75,7 @@ Hypothesis: By comparing the performance of unweighted network inference methods
 
 <!-- Generic background on network inference methods in systems biology -->
 Network edge (or "link") prediction is a classic problem in statistics and machine learning.
-While many methods have found success in predicting new links in biological networks (**CITAITONS**), the the predictions made are hugely influenced by aspects of networks that may interfere with the prediction of the desired link-types.
+While many methods have found success in predicting new links in biological networks (**CITATIONS**), the the predictions made are hugely influenced by aspects of networks that may interfere with the prediction of the desired link-types.
 That is, while many link prediction methods are able to recapitulate new or held-out links, insufficient effort has been devoted to an analysis of the types of links being predicted.
 For example, consider the task of predicting new interactions in a protein-protein interaction network.
 To predict an interaction between ubiquitin and a protein with which it does not yet have a demonstrated connection would be methodologically trivial and the result uninteresting, even though the proteins may have an actual biological interaction.
@@ -125,15 +106,18 @@ In other applications, such as, for example, the network-based prediction of pro
 Our methods are able to account for three confounders, density, degree, and neighborhood structure.
 While we provide a detailed framework for edge prediction methods, our method is applicable to any network inference approaches involving networks with unweighted edges.
 
+A procedure for degree-preserving randomizations that is applicable to bipartite graphs.
+
 ## Methods
 
 * Methods
-  * Description of XSwap, the neighborhood-preserving randomization, Chung-Lu, and our implementations
+  * Description of XSwap, Chung-Lu, Erdos-Renyi, and our implementations
   * Graphs showing percent swapped, speed, etc.
   * Bayesian framework for thinking about pairwise features, feature priors, etc. Mathematical writeup.
 
 
-Our method's fundamental network randomization procedure are degree-preserving edge swaps.
+<!-- Our method's fundamental network randomization procedure involves degree-preserving edge swaps. -->
+We propose a method of degree-preserving edge swaps to generate random networks.
 While this procedure is not guaranteed to sample in an unbiased fashion from the space of all networks with a given degree sequence, the procedure is simpler and faster than alternatives which guarantee a degree sequence.
 Methods which generate networks having an *expected* degree sequence equal to a given degree sequence are also viable, and we include a comparison of such methods in the results section.
 Briefly, we believe that both methods are potentially viable, though we prefer guaranteed degrees with potentially biased sampling to unbiased samples with potentially different degree sequence.
@@ -144,51 +128,82 @@ To allow greater flexibility for heterogeneous biomedical networks with various 
 Specifically, two chosen edges constitute a valid swap if they preserve degree for all four involved nodes and do not violate the above condition options.
 The original algorithm and our proposed modification are shown below.
 
-<!-- \begin{algorithm}
-    \centering
-    \begin{spacing}{1.15}
-    \begin{algorithmic}
-        \REQUIRE Undirected graph $G$, distribution $\rho$, and number of steps $T$.
-        \ENSURE Edge-swapped graph $G_s$
-        \REPEAT
-            \STATE Select two edges $(i, j)$, $(k, l) \in E(G_s)$
-            \IF{$(i, l)\not\in E(G_s)$ and $(k, j)\not\in E(G_s)$}
-                \STATE $E(\widehat{G_s}) \gets E(G_s) \setminus \{(i, j), (k, l)\} \cup \{(i, l), (k, j)\}$ \\
-                \algorithmicdo{ with probability $\mathrm{min}(\rho(\widehat{G_s} / \rho(G_s), 1)$} \\
-                    \STATE\hspace{\algorithmicindent} $G_s \gets \widehat{G_s}$ \\
-                \algorithmicend{ \textbf{do}}
-            \ENDIF
-        \UNTIL{reaching $T$ steps}
-    \end{algorithmic}
-    \end{spacing}
+<pre id="xswap" style="display:none">
+    \begin{algorithm}
     \caption{XSwap algorithm due to Hanhijärvi, et al.}
-    \label{fig:xswap_original}
-\end{algorithm}
-
-\begin{algorithm}
-    \centering
-    \begin{spacing}{1.15}
     \begin{algorithmic}
-        \REQUIRE \par\hskip\algorithmicindent\par
-        \hskip\algorithmicindent Undirected graph $G$,\par
-        \hskip\algorithmicindent booleans \texttt{allow\_antiparallel}, \texttt{allow\_loops} \par
-        \hskip\algorithmicindent number of steps $T$
-        \ENSURE Edge-swapped graph $G_s$
-        \REPEAT
-            \STATE Select two edges $(i, j)$, $(k, l) \in E(G_s)$
-            \IF{
-            $(i, l)\not\in E(G_s)$ \AND $(k, j)\not\in E(G_s)$ \AND \par
-            (\texttt{allow\_antiparallel} or ($(l, i) \not\in E(G_s)$ and $(k, j) \not \in E(G_s)$) \AND \par
-            (\texttt{allow\_loops} or ($i \neq l$ and $k \neq j$)
-            }
-                \STATE $E(G_s) \gets (E(G_s) \setminus \{(i, j), (k, l)\}) \cup \{(i, l), (k, j)\}$
-            \ENDIF
-        \UNTIL{reaching $T$ steps}
+
+    \STATE \textbf{Input:} Undirected graph $G$, distribution $\rho$, and number of steps $T$
+    \STATE \textbf{Output:} Edge-swapped graph $G_s$
+
+    \FOR{i = 1,...,T}
+        \STATE Select two edges $(i, j)$, $(k, l) \in E(G_s)$
+        \IF{$(i, l)\not\in E(G_s)$ and $(k, j)\not\in E(G_s)$}
+            \STATE $E(\widehat{G_s}) \gets E(G_s) \setminus \{(i, j), (k, l)\} \cup \{(i, l), (k, j)\}$
+            \STATE $G_s \gets \widehat{G_s}$ with probability $\mathrm{min}(\rho(\widehat{G_s}) / \rho(G_s), 1)$
+        \ENDIF
+    \ENDFOR
+
     \end{algorithmic}
-    \end{spacing}
+    \end{algorithm}
+</pre>
+<script type="text/javascript">
+    var xswap = document.getElementById("xswap").textContent;
+    pseudocode.render(xswap, document.body, {
+        lineNumber: false,
+        indentSize: '1.2em'
+    });
+</script>
+
+
+<pre id="our-algo" style="display:none">
+    \begin{algorithm}
     \caption{Proposed modified algorithm for multi-type network permutation}
-    \label{fig:xswap_original}
-\end{algorithm} -->
+    \begin{algorithmic}
+    \STATE \textbf{Input:}
+    Undirected graph $G$,
+    number of steps $T$,
+    booleans \texttt{allow\_antiparallel} and \texttt{allow\_loops}
+    \STATE \textbf{Output:} Edge-swapped graph $G_T$
+    \STATE \textbf{Initialize} $G_0 \gets G$
+    \FOR{i = 1,...,T}
+        \STATE Select two edges $(i, j)$, $(k, l) \in E(G_{i-1})$
+        <!-- \STATE $E(\widehat{G_i}) \gets (E(G_i) \setminus \{(i, j), (k, l)\}) \cup \{(i, l), (k, j)\}$ -->
+        \STATE \textbf{condition 1} $(i, l)\not\in E(G_{i-1})$ \AND $(k, j)\not\in E(G_{i-1})$
+        \STATE \textbf{condition 2} \texttt{allow\_antiparallel} or ($(l, i) \not\in E(G_{i-1})$ and $(k, j) \not \in E(G_{i-1})$)
+        \STATE \textbf{condition 3} \texttt{allow\_loops} or ($i \neq l$ and $k \neq j$))
+        \IF{all conditions met}
+            \STATE $E(G_{i}) \gets (E(G_{i-1}) \setminus \{(i, j), (k, l)\}) \cup \{(i, l), (k, j)\} $
+        \ELSE
+            \STATE $G_{i} \gets G_{i-1}$
+        \ENDIF
+    \ENDFOR
+    \end{algorithmic}
+    \end{algorithm}
+</pre>
+<script type="text/javascript">
+    var ours = document.getElementById("our-algo").textContent;
+    pseudocode.render(ours, document.body, {
+        lineNumber: false,
+        indentSize: '1.2em'
+    });
+</script>
+
+Our method applies degree-preserving network randomization (DPR) to network inference on a node or node-pair basis.
+Previous work has demonstrated the applicability of DPR to the generation of random networks that are more similar to real networks than those which could be generated using previous random-graph generation methods.
+For example, Dekker used DPR to generate social networks that were similar to real networks.
+**Other examples**
+Unlike previous works, our method seeks to use DPR to inform inference at a node or node-pair scale, rather than at the scale of whole-network summary features.
+Consequently, our approach requires a node or node-pair feature generation method such as random walk with restart (RWR) that can be treated like the test statistic in a permutation test.
+By comparing features computed on an actual network to the distribution of those features computed on DPR-generated graphs, one can isolate the effect of node degree on the features of interest.
+Computing a feature on DPR-generated networks allows one to estimate the distribution of that feature under the null hypothesis that the network's edges are not informative.
+Moreover, the degree-preserving aspect of DPR relative to other methods for the generation of random networks allows the null hypothesis to be more compact.
+The null hypothesis must only state that the network's specific connections are not informative.
+This specificity is more helpful than would be possible under a testing paradigm in which one needed also to make assumptions about degree and network characteristics.
+For example, the null hypothesis that the network's edges are distributed randomly is far easier to reject, as most real networks will follow a non-random degree distribution.
+
+Our method is applicable to bipartite graphs.
+This is a major advantage of our method over others because the generation of a random bipartite graph with specified vertex degree sequences for both color classes is possible with a Havel-Hakimi type algorithm, but such graphs have a
 
 ## Results
 
