--- a/content/02.body.md
+++ b/content/02.body.md
@@ -6,8 +6,26 @@
 
 ### Edge prediction
 
-### Feature-degree correlation
+We focus on (biomedical) network edge prediction.
+In particular, we are interested in predicting new edges with specificity, so that predictions reflect particular connectivity rather than generic node characteristics.
+We believe that degree is a broadly appropriate proxy for nonspecificity, meaning that predictive performance attributable to degree can be considered nonspecific across a variety of domains.
+For example, if node A connects to nearly all other nodes in a network, predicting that all remaining nodes share an edge with node A will likely result in many correct--though nonspecific--predictions, regardless of the type of data contained in the network.
+Prediction without reliance on node degree is challenging because many effective methods for edge prediction are correlated with degree (Figure {@fig:feature-degree}).
+Therefore, effective predictive methods will make both specific and nonspecific predictions.
+Node degree must be accounted for, rather than eliminated, to make correct predictions while being able to distinguish specific from nonspecific predictions.
 
+![Common link-prediction features are correlated with node degree.
+Shown are five features (Supplemental table 2) computed on literature-derived protein-protein interaction network [@doi:10.1093/nar/gky1131] and the geometric mean of the node pair's source and target degrees.
+All five features show a positive relationship with degree, though the magnitude of this correlation is highly variable.](https://github.com/zietzm/xswap-analysis/raw/new-plots/img/fig2.feature_degree.png){#fig:feature-degree width="100%"}
+
+To account for degree without impairing predictive performance, we propose the use of a node-pair-level quantification of edge probability due to degree.
+We have identified two potential uses of such a probability.
+First, a numerical quantity associated with every node pair allows the probability to be treated as a classification score.
+The ordering of these scores allows the assessment of diagnostic ability (eg: via AUROC), and the bound of a probability between 0 and 1 allows the assessment of classification calibration.
+The performance of a degree-based probability can be treated as the baseline level of performance when comparing and evaluating other classifiers.
+Second, because the probability is at the same node pair resolution as prediction features, it enables feature adjustment relative to degree-based probabilities.
+Depending on the task, degree may be a desired feature so the probability could be treated like the prior probability of an edge.
+Alternatively, if degree is not a desired feature, then the probability could be used to downweight features and thus potentially enhance predictive specificity.
 
 ## Methods
 
