--- a/content/02.body.md
+++ b/content/02.body.md
@@ -61,9 +61,35 @@ Further discussion of this approximate edge prior and an derivation are availabl
 
 ## Results
 
+### Node degree
+
+Figure {@fig:degree-bias} illustrates the problem of degree bias by showing node degree in separate networks for the same type of data.
+Depending on the methods by which the represented data were generated, networks of the same type of data may assign very different degree to the same nodes (Figure {@fig:degree-bias}B), and they may have overall degree distributions that differ greatly (Figure {@fig:degree-bias}A).
+
+![**A.** Degree distributions of networks with and without degree bias can be very different.
+  Protein-protein interaction (PPI) literature-derived network from STRING [@doi:10.1093/nar/gky1131], high-throughput-derived networks from Rual et al. [@doi:10.1038/nature04209] and Rolland et al. [@doi:10.1016/j.cell.2014.10.050].
+  Transcription factor-target gene (TF-TG) literature-derived network from Han et al. [@doi:10.1093/nar/gkx1013] and high-throughput network from Lachmann et al. [@doi:10.1093/bioinformatics/btq466].
+  BioRxiv data from Rxivist [@doi:10.1101/515643; @doi:10.5281/zenodo.2566421] had edges split between those existing before and during/after 2018.
+  **B.** Uniform random sampling edges produces node degrees that are linearly correlated with those in the unsampled network.
+  70% of literature edges were sampled with uniform probability.
+  Systematically-derived and literature-derived networks do not produce linearly correlated node degree.
+  Assuming that the inclusion of an edge in the systematic network is independent of node degree, the systematic degree should be linearly correlated with the true number of relationships.
+  Edges found in literature-derived networks represent a non-random sample from systematically-derived edges.
+  Shown are the same PPI and TF-TG networks as in subfigure A.
+](https://github.com/greenelab/xswap-analysis/raw/5a257c9d28e0a4c3cc8f2fd8493f27ff4652f2c6/img/degree_bias.png){#fig:degree-bias width="100%"}
+
+Edge prediction methods tend to be heavily influenced by degree (Figure {@fig:feature-degree}).
+
+![Common edge-prediction features are correlated with node degree.
+  Shown are five features (Supplemental table {@tbl:edge-prediction}) computed on STRING protein-protein interaction network [@doi:10.1093/nar/gky1131] and the product of the node pair's source and target degrees.
+  All five features show a positive relationship with degree, though the magnitude of this correlation is highly variable.
+](https://github.com/greenelab/xswap-analysis/raw/5a257c9d28e0a4c3cc8f2fd8493f27ff4652f2c6/img/feature_degree.png){#fig:feature-degree width="100%"}
+
+
 ![Discrimination figure](){#fig:discrimination width="100%"}
 
 ![Calibration figure](){#fig:calibration width="100%"}
+
 
 ## Discussion
 
