--- a/content/02.body.md
+++ b/content/02.body.md
@@ -63,7 +63,8 @@ Further discussion of this approximate edge prior and an derivation are availabl
 
 ### Node degree
 
-Figure {@fig:degree-bias} illustrates the problem of degree bias by showing node degree in separate networks for the same type of data.
+We found two examples of node degree bias in the PPI and TF-TG networks we investigated.
+Figure {@fig:degree-bias} shows node degree in separate networks for the same type of data.
 Depending on the methods by which the represented data were generated, networks of the same type of data may assign very different degree to the same nodes (Figure {@fig:degree-bias}B), and they may have overall degree distributions that differ greatly (Figure {@fig:degree-bias}A).
 
 ![**A.** Degree distributions of networks with and without degree bias can be very different.
