--- a/content/02.body.md
+++ b/content/02.body.md
@@ -159,6 +159,15 @@ As the edge prior is not based on the networks' true edges, these results indica
   **C.** Boxplots summarizing individual Hetionet network calibrations. Calibration metric is from the two-component decomposition of the Brier score, and a lower score indicates superior calibration.](https://github.com/zietzm/xswap-analysis/raw/fb5e093ab5baedd129629ee8e41526c286cbbe45/img/fig4.calibration.png){#fig:calibration width="100%"}
 
 
+The second prediction task mirrored the first task, but it involved reconstructing networks based on subsampled networks with only 70% of the original edges.
+Because edges were sampled uniformly without replacement, the subsampled networks share similar degree distributions to the original networks (see Figure {@fig:degree}B).
+Unlike in the first task, edges that were present in the sampled network were not tested and therefore are not included in the performance metrics.
+The results of the second prediction task further demonstrate a high level of performance for degree-sequence-based node pair features (Figure {@fig:discrimination}).
+The edge prior was able to reconstruct the unsampled network with an AUROC of greater than 0.9 in 14 of 20 networks.
+As was observed in the first task, node pair features computed in second prediction task were highly rank-correlated, meaning the AUROC values for different features were similar.
+While reconstruction performance was, as expected, slightly lower in the second task compared to the first, we found that many networks were still able to be reconstructed with a high level of performance.
+The edge prior was the best calibrated feature in both the first and second prediction tasks.
+
 ## Discussion
 
 
