--- a/content/02.body.md
+++ b/content/02.body.md
@@ -168,6 +168,14 @@ As was observed in the first task, node pair features computed in second predict
 While reconstruction performance was, as expected, slightly lower in the second task compared to the first, we found that many networks were still able to be reconstructed with a high level of performance.
 The edge prior was the best calibrated feature in both the first and second prediction tasks.
 
+In the third prediction task, we computed the three edge prediction features for paired networks representing data from PPI, TF-TG, and bioRxiv bioinformatics pre-print co-authorship.
+The goal of the task was to compare predictive performance across different degree distributions for the same type of data.
+We find that the task of predicting systematically-derived edges using a network with degree bias is significantly more challenging than network reconstruction, and we find consistently lower performance compared to the other tasks (Figure {@fig:discrimination}).
+The edge prior was not able to predict the separate PPI network better than by random guessing (AUROC of roughly 0.5).
+Only slightly better was its performance in predicting the separate TF-TG network, at an AUROC of 0.59.
+We find superior performance in predicting the co-authorship relationships (AUROC 0.75), which was expected as the network being predicted shared roughly the same degree distribution as the network on which the edge prior was computed.
+The results of the third prediction task show that a difference in degree distribution between the network on which features are computed and the network to be predicted can make prediction significantly more challenging.
+
 ## Discussion
 
 
