--- a/content/02.body.md
+++ b/content/02.body.md
@@ -150,7 +150,9 @@ Depending on the methods by which the represented data were generated, networks 
   Shown are the same PPI and TF-TG networks as in subfigure A.
 ](https://github.com/greenelab/xswap-analysis/raw/d7181e64a5c90f9720ab453334892aba164651e7/img/degree_bias.png){#fig:degree-bias width="100%"}
 
-Edge prediction methods tend to be heavily influenced by degree (Figure {@fig:feature-degree}).
+We found that common edge prediction methods tend to be heavily influenced by degree (Figure {@fig:feature-degree}).
+
+(I plan to include a figure where it shows the *performance* of each feature on each network, alongside the edge prior performance, to quantify how based on degree these are. For now, I'm just leaving this figure here because it is referenced elsewhere in the manuscript.)
 
 ![Common edge-prediction features are correlated with node degree.
   Shown are five features (Supplemental table {@tbl:edge-prediction}) computed on STRING protein-protein interaction network [@doi:10.1093/nar/gky1131] and the product of the node pair's source and target degrees.
