--- a/content/02.body.md
+++ b/content/02.body.md
@@ -134,6 +134,32 @@ The full source code for our method of degree-preserving network permutation has
 
 ## Results
 
+### Node degree
+
+We found two examples of node degree bias in the PPI and TF-TG networks we investigated.
+Figure {@fig:degree-bias} shows node degree in separate networks for the same type of data.
+Depending on the methods by which the represented data were generated, networks of the same type of data may have overall degree distributions that differ greatly (Figure {@fig:degree-bias}A), and they may even assign very different degree to the same nodes (Figure {@fig:degree-bias}B).
+
+![**A.** Degree distributions of networks with and without degree bias can be very different.
+  Protein-protein interaction (PPI) literature-derived network from STRING [@doi:10.1093/nar/gky1131], high-throughput-derived networks from Rual et al. [@doi:10.1038/nature04209] and Rolland et al. [@doi:10.1016/j.cell.2014.10.050].
+  Transcription factor-target gene (TF-TG) literature-derived network from Han et al. [@doi:10.1093/nar/gkx1013] and high-throughput network from Lachmann et al. [@doi:10.1093/bioinformatics/btq466].
+  BioRxiv data from Rxivist [@doi:10.1101/515643; @doi:10.5281/zenodo.2566421] had edges split between those existing before and during/after 2018.
+  **B.** Uniform random sampling produces linearly-correlated node degree, while non-random sampling produces non-correlated degree.
+  70% of literature edges were sampled with uniform probability for the "Subsampled holdout" network.
+  Systematically-derived networks are not uniformly sampled sampled from literature-derived networks or vice versa.
+  Shown are the same PPI and TF-TG networks as in subfigure A.
+](https://github.com/greenelab/xswap-analysis/raw/d7181e64a5c90f9720ab453334892aba164651e7/img/degree_bias.png){#fig:degree-bias width="100%"}
+
+We found that common edge prediction methods tend to be heavily influenced by degree (Figure {@fig:feature-degree}).
+
+(I plan to include a figure where it shows the *performance* of each feature on each network, alongside the edge prior performance, to quantify how based on degree these are. For now, I'm just leaving this figure here because it is referenced elsewhere in the manuscript.)
+
+![Common edge-prediction features are correlated with node degree.
+  Shown are five features (Supplemental table {@tbl:edge-prediction}) computed on STRING protein-protein interaction network [@doi:10.1093/nar/gky1131] and the product of the node pair's source and target degrees.
+  All five features show a positive relationship with degree, though the magnitude of this correlation is highly variable.
+  Preferential attachment index is understandably perfectly correlated because it is equal to the product of source and target degree.
+](https://github.com/greenelab/xswap-analysis/raw/d7181e64a5c90f9720ab453334892aba164651e7/img/feature_degree.png){#fig:feature-degree width="100%"}
+
 ### Edge prior
 
 In the first prediction task, we computed three features--the XSwap edge prior, an approximation to the edge prior, and the (scaled) product of source and target node degree--on networks from Hetionet.
@@ -160,7 +186,7 @@ As the edge prior is not based on the networks' true edges, these results indica
 
 
 The second prediction task mirrored the first task, but it involved reconstructing networks based on subsampled networks with only 70% of the original edges.
-Because edges were sampled uniformly without replacement, the subsampled networks share similar degree distributions to the original networks (see Figure {@fig:degree}B).
+Because edges were sampled uniformly without replacement, the subsampled networks share similar degree distributions to the original networks (see Figure {@fig:degree-bias}B).
 Unlike in the first task, edges that were present in the sampled network were not tested and therefore are not included in the performance metrics.
 The results of the second prediction task further demonstrate a high level of performance for degree-sequence-based node pair features (Figure {@fig:discrimination}).
 The edge prior was able to reconstruct the unsampled network with an AUROC of greater than 0.9 in 14 of 20 networks.
@@ -175,6 +201,7 @@ The edge prior was not able to predict the separate PPI network better than by r
 Only slightly better was its performance in predicting the separate TF-TG network, at an AUROC of 0.59.
 We find superior performance in predicting the co-authorship relationships (AUROC 0.75), which was expected as the network being predicted shared roughly the same degree distribution as the network on which the edge prior was computed.
 The results of the third prediction task show that a difference in degree distribution between the network on which features are computed and the network to be predicted can make prediction significantly more challenging.
+
 
 ## Discussion
 
